Do not double encode parameters when they are contained in the URL